[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entities/Components/PurpleFlower.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Components/DeadFlower.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Components/BaseFlower.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/Components/YellowFlower.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/Components/DarkRedFlower.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/RandomFlower.gd" type="Script" id=6]

[node name="RandomFlower" type="KinematicBody"]
script = ExtResource( 6 )

[node name="BaseFlower" parent="." instance=ExtResource( 3 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
visible = false

[node name="DeadFlower" parent="." instance=ExtResource( 2 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
visible = false

[node name="PurpleFlower" parent="." instance=ExtResource( 1 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
visible = false

[node name="YellowFlower" parent="." instance=ExtResource( 4 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0.0111241 )
visible = false

[node name="DarkRedFlower" parent="." instance=ExtResource( 5 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
visible = false

[node name="GrowthTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="openflower" from="." to="BaseFlower" method="_on_RandomFlower_openflower"]
[connection signal="openflower" from="." to="DeadFlower" method="_on_RandomFlower_openflower"]
[connection signal="openflower" from="." to="PurpleFlower" method="_on_RandomFlower_openflower"]
[connection signal="openflower" from="." to="YellowFlower" method="_on_RandomFlower_openflower"]
[connection signal="openflower" from="." to="DarkRedFlower" method="_on_RandomFlower_openflower"]
[connection signal="startgrowth" from="." to="BaseFlower" method="_on_RandomFlower_startgrowth"]
[connection signal="startgrowth" from="." to="DeadFlower" method="_on_RandomFlower_startgrowth"]
[connection signal="startgrowth" from="." to="PurpleFlower" method="_on_RandomFlower_startgrowth"]
[connection signal="startgrowth" from="." to="YellowFlower" method="_on_RandomFlower_startgrowth"]
[connection signal="startgrowth" from="." to="DarkRedFlower" method="_on_RandomFlower_startgrowth"]
[connection signal="timeout" from="GrowthTimer" to="." method="_on_GrowthTimer_timeout"]
